# ml-house-prediction

./: .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-mlflow.txt  requirements.txt
docker/: api-cloud.Dockerfile  api.Dockerfile  mlflow.Dockerfile  streamlit.Dockerfile
notebooks/: 01_eda.ipynb
src/api/: main.py
src/data/: data_loader.py
src/models/: model.py  train.py
streamlit_app/: app.py
tests/: api_test.py  model_test.py
