[tool.poetry]
name = "ml-house-prediction"
version = "0.1.0"
description = "ML full project"
authors = ["andre <andre.deoliveiragomes@ovomcare.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Set this to match your current venv Python version.
# If you're on 3.12, the next line is a safe default:
python = ">=3.13,<3.14"

requests = ">=2.32.5,<3.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
pandas = ">=2.1.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
matplotlib = ">=3.8.0,<4.0.0"
seaborn = ">=0.13.0,<0.14.0"
fastapi = ">=0.110.0,<1.0.0"
uvicorn = ">=0.27.0,<1.0.0"
python-multipart = ">=0.0.20,<0.0.21"
mlflow = ">=2.12.0,<3.0.0"
streamlit = ">=1.32.0,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pydantic = ">=2.6.0,<3.0.0"
plotly = "^6.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
black = ">=24.0.0,<26.0.0"
isort = ">=5.13.0,<7.0.0"
flake8 = ">=7.0.0,<8.0.0"
jupyter = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"